done practical work №7

--- a/PR1.vcxproj
+++ b/PR1.vcxproj
@@ -134,6 +134,7 @@
   <ItemGroup>
     <ClInclude Include="Student.h" />
     <ClInclude Include="Teacher.h" />
+    <ClInclude Include="Vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
