--- a/PR1.vcxproj.filters
+++ b/PR1.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Teacher.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Vector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
